feat: implemented nft service
