# internal/ads-service/controller/http/v1/payment/payment.go
@@ -55,9 +55,9 @@ func (ctrl *Controller) InitAPI(router *gin.RouterGroup) {
 //	@Accept			json
 //	@Produce		json
 //	@Security		BearerAuth
-//	@Success		200		{object}	handler.BasicResponseDTO{data=payment.Response}
-//	@Failure		400		{object}	handler.ErrorResponse
-//	@Failure		500		{object}	handler.ErrorResponse
+//	@Success		200	{object}	handler.BasicResponseDTO{data=payment.Response}
+//	@Failure		400	{object}	handler.ErrorResponse
+//	@Failure		500	{object}	handler.ErrorResponse
 //	@Router			/api/v1/payments [post]
 func (ctrl *Controller) createPayment(c *gin.Context) {
 	userId, _ := c.Get("userId")
@@ -100,9 +100,9 @@ func (ctrl *Controller) createPayment(c *gin.Context) {
 //	@Accept			json
 //	@Produce		json
 //	@Security		BearerAuth
-//	@Success		200		{object}	handler.BasicResponseDTO{data=payment.StatusChangedResponse}
-//	@Failure		400		{object}	handler.ErrorResponse
-//	@Failure		500		{object}	handler.ErrorResponse
+//	@Success		200	{object}	handler.BasicResponseDTO{data=payment.StatusChangedResponse}
+//	@Failure		400	{object}	handler.ErrorResponse
+//	@Failure		500	{object}	handler.ErrorResponse
 //	@Router			/api/v1/payments/webhook [post]
 func (ctrl *Controller) processWebhook(c *gin.Context) {
 	var request WebhookPaymentRequest
