# internal/ads-service/domain/ad/entity.go
@@ -5,22 +5,29 @@ import (
 )
 
 type Ad struct {
-	Id            int64     `json:"id"`
-	Title         string    `json:"title"`
-	Description   string    `json:"description"`
-	Price         float64   `json:"price"`
-	Vin           string    `json:"vin"`
-	Brand         string    `json:"brand"`
-	Model         string    `json:"model"`
-	YearOfRelease int64     `json:"year_of_release"`
-	IsFavorite    bool      `json:"is_favorite"`
-	IsTokenMinted bool      `json:"is_token_minted"`
-	ImageUrl      string    `json:"image_url"`
-	UserId        int64     `json:"user_id"`
-	CreatedAt     time.Time `json:"created_at"`
-	UpdatedAt     time.Time `json:"updated_at"`
+	Id            int64
+	Title         string
+	Description   string
+	Price         float64
+	Vin           string
+	Brand         string
+	Model         string
+	YearOfRelease int64
+	IsFavorite    bool
+	IsTokenMinted bool
+	ImageUrl      string
+	UserId        int64
+	CreatedAt     time.Time
+	UpdatedAt     time.Time
 	ChatExists    bool
 	Promotion     Promotion
+	Category      string
+	RegNumber     string
+	Type          string
+	Color         string
+	Hp            string
+	FullWeight    string
+	SoloWeight    string
 }
 
 type Promotion struct {
